# nand2tetris

./: Cargo.toml  README.md
01/: And.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux8Way16.hdl  Or.hdl
03/a/: RAM64.hdl
03/b/: RAM16K.hdl  RAM4K.hdl
04/fill/: Fill.asm
04/mult/: Mult.asm
05/: Computer.hdl  Memory.hdl
projects/01/: Mux.hdl  Mux4Way16.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  FullAdder.hdl
projects/03/a/: Bit.hdl  PC.hdl  RAM8.hdl
projects/03/b/: RAM512.hdl
projects/05/: CPU.hdl
projects/07/MemoryAccess/BasicTest/: BasicTest.asm  BasicTest.hack
projects/07/MemoryAccess/PointerTest/: PointerTest.asm  PointerTest.hack
projects/07/MemoryAccess/StaticTest/: StaticTest.asm  StaticTest.hack
projects/07/StackArithmetic/SimpleAdd/: SimpleAdd.asm  SimpleAdd.hack
projects/07/StackArithmetic/StackTest/: StackTest.asm  StackTest.hack
projects/08/FunctionCalls/FibonacciElement/: FibonacciElement.asm
projects/08/FunctionCalls/NestedCall/: NestedCall.asm
projects/08/FunctionCalls/SimpleFunction/: SimpleFunction.asm
projects/08/FunctionCalls/StaticsTest/: StaticsTest.asm
projects/08/ProgramFlow/BasicLoop/: BasicLoop.asm
projects/08/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
src/: lib.rs  main.rs
src/assembler/: code.rs  mod.rs  parser.rs  symbol_table.rs  writer.rs
src/vm_translator/: code_writer.rs  mod.rs  parser.rs
