[package]
name = "nand2tetris"
version = "0.1.0"
authors = ["y011d4"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/y011d4/nand2tetris"
keywords = ["nand2tetris", "rust", "The Elements of Comuputing Systems"]

[lib]
name = "nand2tetris"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ="*"

[profile.release]
debug = true
